Second player stats

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -12,16 +12,25 @@
         * {
             font-size: 12px;
         }
+
+        body {
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
 %title% <br />
 And the winner is <b>%winner%</b>
 <hr />
-Winner<br />
-Min: %winnermin%<br />
-Max: %winnermax%<br />
-Avg: %winneravg%<br />
+%a%<br />
+Min: %amin%<br />
+Max: %amax%<br />
+Avg: %aavg%<br />
+<hr />
+%b%<br />
+Min: %bmin%<br />
+Max: %bmax%<br />
+Avg: %bavg%<br />
 
 </body>
 </html>
