Add basic stress tests

--- a/src/main/resources/views/champions.fxml
+++ b/src/main/resources/views/champions.fxml
@@ -37,7 +37,7 @@
             <bottom>
                <VBox spacing="5.0" BorderPane.alignment="CENTER">
                   <children>
-                     <Button disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#soloGame" text="Stress test all" />
+                     <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stressTestAll" text="Stress test all" />
                      <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#openLeaderboard" text="Show leaderboard" />
                   </children>
                </VBox>
@@ -68,7 +68,7 @@
             <bottom>
                <VBox spacing="5.0" BorderPane.alignment="CENTER">
                   <Button disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Rematch" />
-                  <Button disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Stress test" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stressTest" text="Stress test" />
                   <Hyperlink text="github.com/VeloxDigitis/bricksj-reborn" />
                   <Label text="Krzysztof Cybulski" />
                   <Label text="Damian Rybicki" />
