--- a/src/main/resources/views/champions.fxml
+++ b/src/main/resources/views/champions.fxml
@@ -56,7 +56,7 @@
                   </font>
                </Label>
                <Canvas fx:id="gameCanvas" height="400.0" width="400.0" />
-               <Slider fx:id="gameSlider" blockIncrement="1.0" majorTickUnit="500.0" max="5000.0" min="1.0" showTickMarks="true" value="1.0" />
+               <Slider fx:id="gameSlider" blockIncrement="1.0" majorTickUnit="500.0" max="5000.0" showTickMarks="true" value="1.0" />
             </VBox>
          </AnchorPane>
       </center>
