--- a/src/main/resources/views/setup.fxml
+++ b/src/main/resources/views/setup.fxml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.veloxdigitis.bricksj.gui.SetupController">
     <VBox prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <GridPane hgap="5.0" vgap="5.0">
@@ -22,22 +34,22 @@
             <Label text="Random bricks" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
             <Label text="Initialization time" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
             <Label text="Move time" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-            <Spinner fx:id="mapSize" GridPane.columnIndex="1">
+            <Spinner fx:id="mapSize" editable="true" GridPane.columnIndex="1">
                 <valueFactory>
                     <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="2" initialValue="99" max="999" min="9" />
                 </valueFactory>
             </Spinner>
-            <Spinner fx:id="randomBricks" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Spinner fx:id="randomBricks" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <valueFactory>
                     <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="5" max="10" min="0" />
                 </valueFactory>
             </Spinner>
-            <Spinner fx:id="initTime" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Spinner fx:id="initTime" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <valueFactory>
                     <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="10" initialValue="1000" max="2000" min="5" />
                 </valueFactory>
             </Spinner>
-            <Spinner fx:id="moveTime" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Spinner fx:id="moveTime" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
                 <valueFactory>
                     <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="10" initialValue="500" max="1000" min="5" />
                 </valueFactory>
@@ -55,12 +67,12 @@
         <Button fx:id="startBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#openChampionsScene" text="Run champions" />
         <StackPane>
             <VBox.margin>
-                <Insets/>
+                <Insets />
             </VBox.margin>
-            <ProgressBar fx:id="progressBar" disable="true" maxWidth="1.7976931348623157E308" progress="0.0"/>
+            <ProgressBar fx:id="progressBar" disable="true" maxWidth="1.7976931348623157E308" progress="0.0" />
             <Label fx:id="progressLabel">
                 <font>
-                    <Font size="11.0"/>
+                    <Font size="11.0" />
                 </font>
             </Label>
         </StackPane>
