--- a/src/main/resources/views/champions.fxml
+++ b/src/main/resources/views/champions.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
@@ -36,10 +37,8 @@
             </top>
             <bottom>
                 <VBox spacing="5.0" BorderPane.alignment="CENTER">
-                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stressTestAll"
-                            text="Stress test all"/>
-                    <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                            onAction="#openLeaderboard" text="Show leaderboard"/>
+                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stressTestAll" text="Stress test all" />
+                    <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#openLeaderboard" text="Show leaderboard" />
                 </VBox>
             </bottom>
             <padding>
@@ -49,7 +48,7 @@
       </left>
       <center>
          <AnchorPane>
-            <VBox alignment="CENTER" layoutX="15.0" layoutY="25.0">
+            <VBox alignment="CENTER" layoutX="10.0" layoutY="13.0">
                <Label fx:id="currentGameLabel" text="Current game">
                   <font>
                      <Font size="18.0" />
@@ -57,6 +56,12 @@
                </Label>
                <Canvas fx:id="gameCanvas" height="400.0" width="400.0" />
                <Slider fx:id="gameSlider" blockIncrement="1.0" majorTickUnit="500.0" max="5000.0" showTickMarks="true" value="1.0" />
+               <HBox alignment="CENTER" spacing="15.0">
+                  <children>
+                     <Button mnemonicParsing="false" onAction="#play" text="Play" />
+                     <Label fx:id="moveLabel" prefWidth="50.0" text="0" />
+                  </children>
+               </HBox>
             </VBox>
          </AnchorPane>
       </center>
