--- a/src/main/resources/views/champions.fxml
+++ b/src/main/resources/views/champions.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -20,11 +21,15 @@
       <left>
          <BorderPane prefWidth="240.0" BorderPane.alignment="CENTER">
             <center>
-               <ListView fx:id="historyList" BorderPane.alignment="CENTER">
+               <VBox spacing="2.0" BorderPane.alignment="CENTER">
                   <BorderPane.margin>
                      <Insets bottom="5.0" top="5.0" />
                   </BorderPane.margin>
-               </ListView>
+                  <children>
+                     <TextField fx:id="search" />
+                     <ListView fx:id="historyList" />
+                  </children>
+               </VBox>
             </center>
             <top>
                <VBox spacing="5.0" BorderPane.alignment="CENTER">
