Add game reason to info panel

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -19,6 +19,8 @@
 <body>
 %title% <br />
 And the winner is <b>%winner%</b>
+<br />
+Ended because of %reason%
 <hr />
 %a%<br />
 Min: %amin%<br />
