Stress tests improvements

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -23,14 +23,14 @@ And the winner is <b>%winner%</b>
 Ended because of %reason%
 <hr />
 %a%<br />
-Min: %amin%<br />
-Max: %amax%<br />
-Avg: %aavg%<br />
+Min: %amin% ms<br />
+Max: %amax% ms<br />
+Avg: %aavg% ms<br />
 <hr />
 %b%<br />
-Min: %bmin%<br />
-Max: %bmax%<br />
-Avg: %bavg%<br />
+Min: %bmin% ms<br />
+Max: %bmax% ms<br />
+Avg: %bavg% ms<br />
 
 </body>
 </html>
