--- a/src/main/resources/views/champions.fxml
+++ b/src/main/resources/views/champions.fxml
@@ -23,10 +23,10 @@
             <center>
                 <VBox spacing="2.0" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
-                        <Insets bottom="5.0" top="5.0"/>
+                        <Insets bottom="5.0" top="5.0" />
                     </BorderPane.margin>
-                    <TextField fx:id="search"/>
-                    <ListView fx:id="historyList"/>
+                    <TextField fx:id="search" />
+                    <ListView fx:id="historyList" />
                 </VBox>
             </center>
             <top>
@@ -60,8 +60,8 @@
                <Canvas fx:id="gameCanvas" height="400.0" width="400.0" />
                <Slider fx:id="gameSlider" blockIncrement="1.0" majorTickUnit="500.0" max="5000.0" showTickMarks="true" value="1.0" />
                 <HBox alignment="CENTER" spacing="15.0">
-                    <Button mnemonicParsing="false" onAction="#play" text="Play"/>
-                    <Label fx:id="moveLabel" prefWidth="50.0" text="0"/>
+                    <Button mnemonicParsing="false" onAction="#play" text="Play" />
+                    <Label fx:id="moveLabel" prefWidth="50.0" text="0" />
                 </HBox>
             </VBox>
          </AnchorPane>
@@ -78,7 +78,7 @@
                   <Hyperlink text="github.com/VeloxDigitis/bricksj-reborn" />
                   <Label text="Krzysztof Cybulski" />
                   <Label text="Damian Rybicki" />
-                  <Label text="v 1.8 beta" />
+                  <Label text="v 2.0" />
                   <BorderPane.margin>
                      <Insets top="5.0" />
                   </BorderPane.margin>
